[package]
name = "noop"
version = "0.1.0"
authors = ["Will Povell <william_povell@brown.edu>"]
edition = "2018"

[dependencies]
nix = { "git" = "https://github.com/nix-rust/nix", "rev" = "7f2ac636e9cf68d6836941b35ba0c4e9d43ae82f" }
byteorder = "*"
seccomp-sys = "0.1.2"

[profile.dev]
debug = true

[dev-dependencies]
rand = "*"
